fix(landing): our story text disappears when clicked on mobile

--- a/app/app/landing/landing.css
+++ b/app/app/landing/landing.css
@@ -43,3 +43,28 @@
         padding: 0 8px;
     }
 }
+
+@media (min-width: 768px) {
+    ul.how-it-works-col li:first-child:hover .how-it-works-info,
+    ul.how-it-works-col li:first-child:hover .how-it-works-info h4,
+    ul.how-it-works-col li:first-child:hover .how-it-works-info p,
+    ul.how-it-works-col li:first-child:hover .how-it-works-info p strong {
+        color: #fff;
+    }
+
+
+    ul.how-it-works-col li:nth-child(2):hover .how-it-works-info,
+    ul.how-it-works-col li:nth-child(2):hover .how-it-works-info h4,
+    ul.how-it-works-col li:nth-child(2):hover .how-it-works-info p,
+    ul.how-it-works-col li:nth-child(2):hover .how-it-works-info p strong {
+        color: #fff;
+    }
+
+
+    ul.how-it-works-col li:last-child:hover .how-it-works-info,
+    ul.how-it-works-col li:last-child:hover .how-it-works-info h4,
+    ul.how-it-works-col li:last-child:hover .how-it-works-info p,
+    ul.how-it-works-col li:last-child:hover .how-it-works-info p strong {
+        color: #fff;
+    }
+}
