--- a/app/css/style-v2.css
+++ b/app/css/style-v2.css
@@ -2486,36 +2486,19 @@ ul.how-it-works-col li:first-child:hover {
 
 }
 
-ul.how-it-works-col li:first-child:hover .how-it-works-info,
-ul.how-it-works-col li:first-child:hover .how-it-works-info h4,
-ul.how-it-works-col li:first-child:hover .how-it-works-info p,
-ul.how-it-works-col li:first-child:hover .how-it-works-info p strong {
-	color: #fff;
-}
+
 
 ul.how-it-works-col li:nth-child(2):hover {
 	background: url(../../images/our-story/theproposal.jpg) no-repeat center center;
 
 }
 
-ul.how-it-works-col li:nth-child(2):hover .how-it-works-info,
-ul.how-it-works-col li:nth-child(2):hover .how-it-works-info h4,
-ul.how-it-works-col li:nth-child(2):hover .how-it-works-info p,
-ul.how-it-works-col li:nth-child(2):hover .how-it-works-info p strong {
-	color: #fff;
-}
 
 ul.how-it-works-col li:last-child:hover {
 	background: url(../../images/our-story/thewedding.jpg) no-repeat center center;
 
 }
 
-ul.how-it-works-col li:last-child:hover .how-it-works-info,
-ul.how-it-works-col li:last-child:hover .how-it-works-info h4,
-ul.how-it-works-col li:last-child:hover .how-it-works-info p,
-ul.how-it-works-col li:last-child:hover .how-it-works-info p strong {
-	color: #fff;
-}
 
 /**
  * 7.0 OUR FEATURES SECTI0N
